# homomorphic-encryption-healthcare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json
backend/: CMakeLists.txt  index.js  logger.js  package-lock.json  package.json
backend/build /: CMakeCache.txt  Makefile
backend/scripts/: build.bat  build.sh  build_and_run.ps1
backend/src/: CORSMiddleware.h  HomomorphicEncryption.cpp  HomomorphicEncryption.h  interfaceCSV.cpp  main-backend.cpp  main.cpp  mini-backend.cpp  test_client.py
backend/src/data/: sample.csv
backend/tests/: csv_handler_test.cpp
docs/: backend.md  frontend.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  Experiment.jsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/benchmark/: page.tsx
frontend/src/app/benchmark-visualization/: page.tsx
frontend/src/components/: about-section.tsx  dataset-analysis.tsx  dataset-result-card.tsx  navbar.tsx  scheme-parameters.tsx  simple-addition.tsx  value-size.tsx
frontend/src/lib/: homomorphic-service.ts  performance-metrics-display.tsx  performance-metrics.ts
machine-learning/: .gitignore  README.md  concrete_LogisticRegression.py  concrete_NeuralNetwork.py  fullyEndtoEndLogisticRegression.py  requirements.txt
machine-learning/docs/: concreteLR.md  concreteNN.md  endtoend.md
microsoft-seal/: README.md  csv_handler_test
microsoft-seal/backend/: CMakeLists.txt
microsoft-seal/backend/src/: HomomorphicEncryption.cpp  HomomorphicEncryption.h  main-backend.cpp  mini-backend.cpp
microsoft-seal/backend/src/data/: sample.csv
microsoft-seal/frontend/: index.html
microsoft-seal/frontend/src/: Experiment.jsx
microsoft-seal/visualizations/: README.md  api-endpoints.md  class-diagram.md  component-structure.md  system-flow.md
node-seal/: README.md
node-seal/backend/: index.js
node-seal/frontend/: package.json
node-seal/frontend/src/app/: page.tsx
node-seal/frontend/src/app/benchmark/: page.tsx
node-seal/frontend/src/components/: dataset-result-card.tsx  navbar.tsx  performance-metrics-display.tsx  simple-addition.tsx  value-size.tsx
node-seal/frontend/src/config/: api.ts
node-seal/frontend/src/lib/: homomorphic-service.ts  use-performance-metrics.ts  use-toast.tsx
node-seal/visualizations/: README.md  api-endpoints.md  class-diagram.md  component-structure.md  system-flow.md
visualizations/: codeVisualizations
